--- a/src/m04-slides-and-speaker-notes.Rmd
+++ b/src/m04-slides-and-speaker-notes.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Lecture02 - Mostly categorical variables"
+title: "Introduction to SAS, Working with categorical variables"
 author: "Steve Simon"
-date: "7/1/2019"
+date: "Created: 2021-05-30"
 output: powerpoint_presentation
 ---
 
@@ -12,6 +12,19 @@ suppressMessages(suppressWarnings(library(dplyr)))
 suppressMessages(suppressWarnings(library(knitr)))
 suppressMessages(suppressWarnings(library(magrittr)))
 ```
+
+### Overview
+
+<div class="notes">
+
+author: Steve Simon
+date: created 2021-05-30
+purpose: to produce slides for module01 videos
+license: public domain
+
+Here is an overview of what I want to cover in module02.
+
+</div>
 
 ### Categorical data
 + proc format
